<resources>
    <string name="demo_collection">Demo COllecion</string>
    <string name="lbl_customer_account_type">Account Type</string>
    <string name="lbl_scheme_name">Scheme Name</string>
    <string name="lbl_duration">Duration</string>
    <string name="lbl_start_date">Start Date</string>
    <string name="lbl_end_date">End Date</string>
    <string name="lbl_capture_fp">ইউজার ফিঙ্গারপ্রিন্ট গ্রহণ</string>
    <string name="lbl_put_fp_on_device">Scanner এর উপরে রাখুন</string>
    <string name="btn_lbl_pick_date">Pick Date</string>
    <string name="lbl_linked_account">Linked Account</string>
    <string name="lbl_monthly_deposit">Monthly Deposit</string>
    <string name="hint_monthly_deposit">Enter Monthly Deposit</string>
    <string name="lbl_on_maturity_amount">On Maturity Amount</string>
    <string name="hint_on_maturity_amount">Enter On Maturity Amount</string>
    <string name="lbl_interest_rate">Interest Rate</string>
    <string name="hint_interest_rate">(Interest Rate)</string>
    <string name="lbl_transfer_mode">ট্রান্সফার টাইপ</string>
    <string name="lbl_transfer_amount">ট্রান্সফার পরিমান </string>
    <string name="lbl_agent_balance_enquiry">Balance Inquiry</string>
    <string name="lbl_kyc_type">KYC এর ধরন</string>
    <string name="lbl_customer_another_acc_no">গ্রাহকের অন্য  হিসাব নম্বর</string>
    <string name="lbl_self">Self</string>
    <string name="lbl_cbl_acc">CBL A/C</string>
    <string name="lbl_eft">EFT</string>
    <string name="lbl_account_name">হিসাব  নাম</string>
    <string name="lbl_another_cbl_acc_no">প্রাপকের হিসাব নম্বর </string>
    <string name="lbl_depositor">যে জমা দিচ্ছে</string>
    <string name="lbl_deposit_self">Self</string>
    <string name="lbl_deposit_bearer">Bearer</string>
    <string name="lbl_cancel">Cancel Operation</string>
    <string name="lbl_transaction_complete">লেনদেন সম্পন্ন</string>
    <string name="lbl_transaction_id">লেনদেন আইডি</string>
    <string name="lbl_comment">মন্তব্য</string>
    <string name="lbl_transaction_charge_amount">চার্জের পরিমান </string>
    <string name="lbl_account_no">হিসাব নম্বর</string>
    <string name="lbl_sender_account_no">প্রাপকের হিসাব নম্বর </string>
    <string name="lbl_sender_account_name">প্রেরকের হিসাব নম্বর </string>
    <string name="hint_enter_account_no">Enter Account No</string>
    <string name="lbl_deposit_amount">জমার পরিমান</string>
    <string name="btnlabel_confirm_by_user_fp">Confirm by User Fingerprint</string>
    <string name="hint_enter_deposit_amount">Enter Deposit Amount</string>
    <string name="lbl_transaction_amount">লেনদেন পরিমান </string>
    <string name="lbl_withdraw_amount">উত্তোলনের পরিমান </string>
    <string name="lbl_bearer_name">জমাদানকারীর  নাম</string>
    <string name="lbl_bearer_mobile_no">জমাদানকারীর মোবাইল নম্বর </string>
    <string name="lbl_maturity_date">Maturity Date</string>
    <string name="btn_label_maturity_date">Enter Maturity Date</string>
    <string name="lbl_renewal_or_encashment">Renewal Or Encashment</string>
    <string name="rdio_lbl_renewal_both_principle_and_interest">Renewal Both Principle and Interest</string>
    <string name="rdio_lbl_renew_principle_only_credit_to_account_no">Renew Principle Only,Credit \nto account no.</string>
    <string name="rdio_lbl_encashment_at_maturity_to_account_no">Encashment at Maturity to account No.</string>
    <string name="label_agentlogin">Agent Sign In</string>
    <string name="app_name">Agrani Doer Banking</string>
    <string name="login">Login</string>
    <string name="Login_progress">Login....</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_banking_menu">Banking Menu Activity</string>
    <string name="labeltext_cashdeposit_self">Cash Deposit(Self)</string>
    <string name="btntext_next">Next</string>
    <string name="btntext_cancel">Cancel</string>
    <string name="btntext_submit">Submit Request</string>
    <string name="btntext_back">Back</string>
    <string name="btntext_search">Search</string>
    <string name="hint_pin">PIN</string>
    <string name="headerlabel_customer_detail">Customer Detail</string>
    <string name="headerlabel_search_customer">Search Customer</string>
    <string name="headerlabel2_default">Header Label2</string>
    <string name="headerlabel_print_confirmation">View Receipt</string>
    <string name="headerlabel_transaction_finish_confirmation">Transaction Complete\nPrint Successfull</string>
    <string name="headerlabel_transaction_cancelled_confirmation">Transaction Cancelled</string>
    <string name="headerlabel_agent_banking_services">Agrani Doer Banking</string>
    <string name="btntext_edit">Edit</string>
    <string name="ImeActionLabelNext">Next</string>
    <string name="Decimal_Point">.</string>
    <string name="IntentData_AccountNumber">AccountNumber</string>
    <string name="IntentData_DepositCode">DCode</string>
    <string name="IntentData_DespositAmount">DepositAmount</string>
    <string name="IntentData_DespositAmountInWords">DepositAmountInWords</string>
    <string name="empty"></string>
    <string name="headerlabel_customer_receipt">Receipt Information</string>
    <string name="btnlabel_print_customer_receipt">Print  Receipt</string>
    <string name="btnlabel_voice_customer_receipt">Voice Receipt</string>
    <string name="btnlabel_done">Done</string>
    <string name="title_languagecategory_usersettings">Language</string>
    <string name="TAKA">TK</string>
    <string name="btnlabel_print">Print</string>
    <string name="btnlabel_play_audio_receipt">Play Audio Receipt </string>
    <string name="Print_Successfull">PrintSuccessfull</string>
    <string name="headerlabel_agent_tools">Agent Tools</string>
    <string name="hint_sender_name_ifr">Sender Name</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="undo">Undo</string>
    <string name="reset">Reset</string>
    <string name="ocr_ready">OCR Ready</string>
    <string name="redo">Redo</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="bright_cont">Brightness\nContrast</string>
    <string name="rotate">Rotate</string>
    <string name="crop">Crop</string>
    <string name="title_activity_bitmap_effect">BitmapEffectActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="back_arrow"></string>
    <string name="title_fp_device_type">Fingerprint Device</string>
    <string name="baseURL">https://172.16.110.11/</string>
    <string name="lblMustIncludeAsSignatory">Must include as a signatory</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_amount_in_bdt">Amount In BDT</string>
    <string name="lbl_880_mobilenumber">+880</string>
    <string name="hint_customer_image">Customer Image</string>
    <string name="RI">Right Index</string>
    <string name="RM">Right Middle</string>
    <string name="RT">Right Thumb</string>
    <string name="RR">Right Ring</string>
    <string name="RP">Right Pinky</string>
    <string name="LI">Left Index</string>
    <string name="LM">Left Middle</string>
    <string name="LT">Left Thumb</string>
    <string name="LR">Left Ring</string>
    <string name="LP">Left Pinky</string>
    <string name="place_Your_finger">Place Your</string>
    <string name="hint_agentid_login">User Name </string>
    <string name="hint_agentpin_login">Password</string>
    <string name="buttonlabel_login_login">Sign In</string>
    <string name="buttonlabel_language_login">Language</string>
    <string name="btntext_logout_bankmenu">Sign Out</string>
    <string name="btnlabel_search_customer">Search Customer</string>
    <string name="btnlabel_search_applicant">Search Applicant</string>
    <string name="headerlabel_searchCustomer_by_accNo">Search Customer by Account No</string>
    <string name="headerlabel_searchCustomer_by_mobNo">Search Customer by Mobile No</string>
    <string name="headerlabel_searchCustomer_by_magCard">Search Customer by Magnetic Card</string>
    <string name="headerlabel_searchCustomer_by_smartCard">Search Customer by Smart Card</string>
    <string name="menu_label_search_customer_by_abccard">by ABC card</string>
    <string name="menu_label_search_customer_by_search_criteria">By Search Criteria</string>
    <string name="menu_label_search_customer_by_acc_number">by Account Number</string>
    <string name="menu_label_search_customer_by_magcard_swipe">by Magnetic Card Swipe</string>
    <string name="menu_label_search_customer_by_smartcard">by Smart Card</string>
    <string name="menu_label_search_customer_by_registered_mob_no">by Registered Mobile No</string>
    <string name="menu_label_search_customer_by_fingerprint">by Fingerprint</string>
    <string name="copyright_title">Version 1.0.2 \nsolution partner</string>
    <string name="msg_call_help_desk">Please,Call Help Desk</string>
    <string name="hint_photo_id_no">Photo ID Number</string>
    <string name="hint_recipient_name">Recipient Name</string>
    <string name="hint_photo_id_front">Photot ID Front</string>
    <string name="hint_photo_id_back">Photot ID Back</string>
    <string name="hint_recipient_mobile_no">Recipient Mobile No</string>
    <string name="hint_recipient_email">Recipient Email</string>
    <string name="hint_sender_name">Sender Name</string>
    <string name="bangla_01">০১</string>
    <string name="bangla_02">০২</string>
    <string name="bangla_03">০৩</string>
    <string name="bangla_04">০৪</string>
    <string name="bangla_05">০৫</string>
    <string name="bangla_06">০৬</string>
    <string name="bangla_07">০৭</string>
    <string name="bangla_08">০৮</string>
    <string name="bangla_09">০৯</string>
    <string name="bangla_10">১০</string>
    <string name="bangla_11">১১</string>
    <string name="bangla_12">১২</string>
    <string name="date_bangla_1">০১</string>
    <string name="date_bangla_2">০২</string>
    <string name="date_bangla_3">০৩</string>
    <string name="date_bangla_4">০৪</string>
    <string name="date_bangla_5">০৫</string>
    <string name="date_bangla_6">০৬</string>
    <string name="date_bangla_7">০৭</string>
    <string name="date_bangla_8">০৮</string>
    <string name="date_bangla_9">০৯</string>
    <string name="date_bangla_10">১০</string>
    <string name="date_bangla_11">১১</string>
    <string name="date_bangla_12">১২</string>
    <string name="date_bangla_13">১৩</string>
    <string name="date_bangla_14">১৪</string>
    <string name="date_bangla_15">১৫</string>
    <string name="date_bangla_16">১৬</string>
    <string name="date_bangla_17">১৭</string>
    <string name="date_bangla_18">১৮</string>
    <string name="date_bangla_19">১৯</string>
    <string name="date_bangla_20">২০</string>
    <string name="date_bangla_21">২১</string>
    <string name="date_bangla_22">২২</string>
    <string name="date_bangla_23">২৩</string>
    <string name="date_bangla_24">২৪</string>
    <string name="date_bangla_25">২৫</string>
    <string name="date_bangla_26">২৬</string>
    <string name="date_bangla_27">২৭</string>
    <string name="date_bangla_28">২৮</string>
    <string name="date_bangla_29">২৯</string>
    <string name="date_bangla_30">৩০</string>
    <string name="date_bangla_31">৩১</string>
    <string name="bangla_January">জানুয়ারী</string>
    <string name="bangla_February">ফেব্রুয়ারী</string>
    <string name="bangla_March">মার্চ</string>
    <string name="bangla_April">এপ্রিল</string>
    <string name="bangla_May">মে</string>
    <string name="bangla_June">জুন</string>
    <string name="bangla_July">জুলাই</string>
    <string name="bangla_August">আগস্ট</string>
    <string name="bangla_September">সেপ্টেম্বর</string>
    <string name="bangla_October">অক্টোবর</string>
    <string name="bangla_November">নভেম্বর</string>
    <string name="bangla_December">ডিসেম্বর</string>
</resources>