<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:baselineAligned="true"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/Date_L0"
        style="@style/keyPad_Date_L0_Layout_Style">


        <LinearLayout
            android:id="@+id/Date_L0_1"
            style="@style/keyPad_Date_Sub_Layout_Style">

            <LinearLayout
                android:id="@+id/Date_L0_1_1"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_1_2"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_2" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_1_3"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_3" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_1_4"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_4" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_1_5"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_5" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_1_6"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_6" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Date_L0_2"
            style="@style/keyPad_Date_Sub_Layout_Style">

            <LinearLayout
                android:id="@+id/Date_L0_2_1"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_7" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_2_2"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_8" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_2_3"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_9" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_2_4"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_10" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_2_5"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_11" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_2_6"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_12" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Date_L0_3"
            style="@style/keyPad_Date_Sub_Layout_Style">

            <LinearLayout
                android:id="@+id/Date_L0_3_1"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_13" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_3_2"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_14" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_3_3"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_15" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_3_4"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_16" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_3_5"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_17" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_3_6"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_18" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Date_L0_4"
            style="@style/keyPad_Date_Sub_Layout_Style">

            <LinearLayout
                android:id="@+id/Date_L0_4_1"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_19" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_4_2"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_20" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_4_3"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_20" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_4_4"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_21" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_4_5"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_22" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_4_6"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_23" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Date_L0_5"
            style="@style/keyPad_Date_Sub_Layout_Style">

            <LinearLayout
                android:id="@+id/Date_L0_5_1"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_24" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_5_2"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_25" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_5_3"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_26" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_5_4"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_27" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_5_5"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_28" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_5_6"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_29" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Date_L0_6"
            style="@style/keyPad_Date_Sub_Layout_Style">

            <LinearLayout
                android:id="@+id/Date_L0_6_1"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_30" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_6_2"
                style="@style/keyPad_Date_actionListener_Layout_Style">

                <TextView
                    style="@style/keyPad_Date_TextView_1_style"
                    android:text="@string/date_bangla_31" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_6_3"
                style="@style/keyPad_Date_actionListener_Layout_Style">


            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_6_4"
                style="@style/keyPad_Date_actionListener_Layout_Style">


            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_6_5"
                style="@style/keyPad_Date_actionListener_Layout_Style">


            </LinearLayout>

            <LinearLayout
                android:id="@+id/Date_L0_6_6"
                style="@style/keyPad_Date_actionListener_Layout_Style">


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>